--- a/src/app/ventas/pages/registro/fichas/fichas.component.html
+++ b/src/app/ventas/pages/registro/fichas/fichas.component.html
@@ -378,10 +378,10 @@
                         <div class="col">
                             <h6 class="fw-medium mb-0">Historial Seguimiento</h6>
                             <p class="text-secondary small">
-                                <span class="badge badge-sm bg-blue">Información Enviada</span>
+                                <span class="badge badge-sm bg-blue">Interesado</span>
                                 <span class="badge badge-sm bg-orange mx-2">No Contesta</span>
                                 <span class="badge badge-sm bg-red">No Interesado</span>
-                                <span class="badge badge-sm bg-black mx-2">Próximo Grupo</span>
+                                <span class="badge badge-sm bg-black mx-2">Lead No Califica</span>
                                 <span class="badge badge-sm bg-green">Compromiso Matrícula</span>
                             </p>
                         </div>
@@ -392,7 +392,7 @@
                         <thead class="d-none">
                             <tr class="text-muted">
                                 <th class="w-200">Historial Seguimiento</th>
-                                <th data-breakpoints="xs sm" class="w-80">No Contesta - No Interesado - Información Enviada - Próximo Grupo</th>
+                                <th data-breakpoints="xs sm" class="w-80">No Contesta - No Interesado - Interesado - Lead No Califica</th>
                             </tr>
                         </thead>
                         <tbody>
