--- a/src/app/academic/pages/prioridad/prioridad.component.html
+++ b/src/app/academic/pages/prioridad/prioridad.component.html
@@ -10,14 +10,17 @@
                         <h6 class="fw-medium mb-0 text-uppercase">Gestión de Leads</h6>
                         <p class="text-secondary small">Asignación Prioridad Leads</p>
                     </div>
+                    <div class="col-auto">
+                        <button class="btn btn-theme" (click)="openNew()">Crear Nueva Prioridad</button>
+                    </div>
                 </div>
             </div>
             <div class="card-body py-3">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 text-center text-uppercase">
-                        <!--<div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+                        <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
                             <div class="example-box" *ngFor="let T of leads" cdkDrag>{{T.priority}}</div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
