--- a/src/app/academic/pages/prioridad/prioridad.component.scss
+++ b/src/app/academic/pages/prioridad/prioridad.component.scss
@@ -1,10 +1,10 @@
-
 .example-list {
-  width: 500px;
+  width: 1000px;
   max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
-  display: block;
+  display: flex;
+  flex-direction: row;
   background: white;
   border-radius: 4px;
   overflow: hidden;
@@ -12,7 +12,7 @@
 
 .example-box {
   padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
+  border-right: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -22,11 +22,11 @@
   cursor: move;
   background: white;
   font-size: 14px;
-  color: rgba(0, 0, 0, 0.87);
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
 .cdk-drag-preview {
-  color: rgba(0, 0, 0, 0.87); /* Asegura que el texto se mantenga visible */
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
@@ -35,7 +35,7 @@
 }
 
 .cdk-drag-placeholder {
-  opacity: 0.6;
+  opacity: 0;
 }
 
 .cdk-drag-animating {
