--- a/src/app/academic/pages/prioridad/prioridad.component.html
+++ b/src/app/academic/pages/prioridad/prioridad.component.html
@@ -19,7 +19,12 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 text-center text-uppercase">
                         <div cdkDropList cdkDropListOrientation="horizontal" class="example-list" (cdkDropListDropped)="drop($event)">
-                            <div class="example-box" *ngFor="let T of leads" cdkDrag>{{T.priority}}</div>
+                            <div class="example-box" *ngFor="let T of leads" cdkDrag>
+                                <div>
+                                    {{T.priority}} <br> <hr>
+                                    {{T.user.detail_user.nombres}} {{T.user.detail_user.apellidos}}
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
