--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -72,6 +72,13 @@
                             <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
                         </a>
                     </li>
+                    <li class="nav-item" *ngIf="is_rol=='is_academic'&&is_user=='JOSE FRANCISCO'">
+                        <a class="nav-link" aria-current="page" routerLink="/academico/leads" routerLinkActive="active" (click)="menuclose()">
+                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-book"></i></div>
+                            <div class="col text-light">Leads</div>
+                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)" aria-current="page" (click)="signout()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-box-arrow-right"></i></div>
