--- a/src/app/academic/pages/leads/leads.component.html
+++ b/src/app/academic/pages/leads/leads.component.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 </div>
-<div class="row" *ngIf="is_user=='JOSE FRANCISCO'">
+<div class="row" *ngIf="is_user=='JOSE FRANCISCO'||is_user=='ACADEMICO'">
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="card border-0 theme-blue bg-gradient-theme-light mb-4">
             <div class="card-header bg-light-theme">
