--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -72,7 +72,7 @@
                             <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
                         </a>
                     </li>
-                    <li class="nav-item" *ngIf="is_rol=='is_academic'&&is_user=='JOSE FRANCISCO'">
+                    <li class="nav-item" *ngIf="is_rol=='is_academic'&&(is_user=='JOSE FRANCISCO'||is_user=='ACADEMICO')">
                         <a class="nav-link" aria-current="page" routerLink="/academico/leads" routerLinkActive="active" (click)="menuclose()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-book"></i></div>
                             <div class="col text-light">Leads</div>
