--- a/src/app/ventas/pages/registro/leads/leads.component.html
+++ b/src/app/ventas/pages/registro/leads/leads.component.html
@@ -17,10 +17,10 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 text-end mb-3">
             <p class="text-secondary small">
-                <span class="badge badge-sm bg-blue">Información Enviada</span>
+                <span class="badge badge-sm bg-blue">Interesado</span>
                 <span class="badge badge-sm bg-orange mx-2">No Contesta</span>
                 <span class="badge badge-sm bg-red">No Interesado</span>
-                <span class="badge badge-sm bg-black mx-2">Próximo Grupo</span>
+                <span class="badge badge-sm bg-black mx-2">Lead No Califica</span>
                 <span class="badge badge-sm bg-green">Compromiso Matrícula</span>
             </p>
         </div>
