--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -65,13 +65,13 @@
                             <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
                         </a>
                     </li> -->
-                    <li class="nav-item" *ngIf="is_rol=='is_student'">
+                    <!-- <li class="nav-item" *ngIf="is_rol=='is_student'">
                         <a class="nav-link" aria-current="page" routerLink="/alumno/constancias" routerLinkActive="active" (click)="menuclose()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-book"></i></div>
                             <div class="col text-light">Constancias</div>
                             <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item" *ngIf="is_rol=='is_academic'&&is_user=='JOSE FRANCISCO'">
                         <a class="nav-link" aria-current="page" routerLink="/academico/asignar-prioridad" routerLinkActive="active" (click)="menuclose()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-book"></i></div>
