--- a/src/app/marketing/pages/events/events.component.html
+++ b/src/app/marketing/pages/events/events.component.html
@@ -347,7 +347,7 @@
         <div class="card-footer">
             <div class="row">
                 <div class="col-auto">
-                    <button class="btn btn-sm btn-theme">Registrar</button>
+                    <!-- <button class="btn btn-sm btn-theme">Registrar</button> -->
                     <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModalDetalle()">Cerrar</button>
                 </div>
             </div>
